[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["PrettyWood <em.jolibois@gmail.com>"]
description = "Game of Life with WebAssembly + Rust"
repository = "https://github.com/PrettyWood/wasm-game-of-life"
license = "MIT"

edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
